# packetmachine-benchmark

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  benchmark.py  bootstrap.sh  buildgo.sh  make_report.py  requirements.txt
src/: pm-bench.cc  readpcap.cc  ticker.hpp  tins-bench.cc
src/task1/: gopkt.go  pm.cc  tins.cc
src/task2/: pm.cc  tins.cc
src/task3/: gopkt.go  pm.cc  tins.cc
